--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 <body>
     <div class="wrapper">
         <div class="output">
-            <div class="previousOperand"></div>
-            <div class="currentOutput"></div>
+            <div class="previousOperand" data-previous-operation></div>
+            <div class="currentOutput" data-current-operation></div>
         </div>
-        <button class="spanTwo">AC</button>
-        <button>DEL</button>
-        <button>÷</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>*</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="spanTwo">=</button>
+        <button class="spanTwo" data-all-clear>AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button class="spanTwo" data-equal>=</button>
     </div>
     <script src="script.js"></script>
 </body>
